fix:Maven添加VM编译参数